[gd_scene load_steps=21 format=3 uid="uid://il06lru30uew"]

[ext_resource type="Texture2D" uid="uid://dn1ds7ira2jm2" path="res://Captura de pantalla 2025-05-12 124026.png" id="1_swuyn"]
[ext_resource type="Texture2D" uid="uid://bm0xm2gwac3oq" path="res://Captura de pantalla 2025-05-05 131008.png" id="2_4lg4f"]
[ext_resource type="Texture2D" uid="uid://c11pki1wiqhfw" path="res://flecha.png" id="3_4lg4f"]
[ext_resource type="Texture2D" uid="uid://cc5tnwuv3s56a" path="res://verd.png" id="3_f66ue"]
[ext_resource type="Texture2D" uid="uid://en6gt3dhr8kg" path="res://Captura de pantalla 2025-05-15 131307.png" id="4_vuw40"]
[ext_resource type="Texture2D" uid="uid://botbnxg5acnbm" path="res://image-Photoroom.png" id="6_eb24l"]
[ext_resource type="Texture2D" uid="uid://da5tf6k34wwv4" path="res://Captura de pantalla 2025-05-13 091112.png" id="6_j4uim"]
[ext_resource type="Script" uid="uid://cqr63fhxr5u3j" path="res://cotxe_2.gd" id="6_vuw40"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p5iq2"]
size = Vector2(243.495, 442.291)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yo3m0"]
size = Vector2(297, 76)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f66ue"]
size = Vector2(73, 421)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vuw40"]
size = Vector2(1138, 77)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eb24l"]
size = Vector2(445.5, 39.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4uim"]
size = Vector2(38, 661)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ld6i6"]
size = Vector2(523, 31.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swuyn"]
size = Vector2(41, 81.8819)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l32um"]
size = Vector2(46, 93)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j4uim"]
radius = 22.0
height = 78.0

[sub_resource type="Curve" id="Curve_eb24l"]
_data = [Vector2(0.0795455, 0.988764), 0.0, 0.0, 0, 0, Vector2(0.931818, 0.41573), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ogk0y"]
size = Vector2(25.5, 19.5)

[node name="Node2D" type="Node2D"]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CapturaDePantalla2025-05-12124026" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(576.473, 326.75)
scale = Vector2(1.12349, 1.12349)
texture = ExtResource("1_swuyn")

[node name="CapturaDePantalla2025-05-05131008" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(677.25, 553.25)
scale = Vector2(0.312121, 0.983516)
texture = ExtResource("2_4lg4f")

[node name="CapturaDePantalla2025-05-05131009" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(457.75, 449)
scale = Vector2(1.21515, 0.664835)
texture = ExtResource("2_4lg4f")

[node name="Verd" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(581, 454.5)
scale = Vector2(0.333333, 0.27)
texture = ExtResource("3_f66ue")

[node name="CapturaDePantalla2025-05-15131307" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(563.25, 441)
scale = Vector2(0.365383, 0.446154)
texture = ExtResource("4_vuw40")

[node name="Flecha" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(481, 360)
rotation = -3.14159
scale = Vector2(0.350394, 0.350394)
texture = ExtResource("3_4lg4f")

[node name="CapturaDePantalla2025-05-13091112" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(378.5, 355.141)
scale = Vector2(1.36957, 1.36957)
texture = ExtResource("6_j4uim")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(596, 435)
scale = Vector2(0.312121, 0.983516)
shape = SubResource("RectangleShape2D_p5iq2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(921, 434.5)
scale = Vector2(0.312121, 0.983516)
shape = SubResource("RectangleShape2D_p5iq2")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(403.5, 258)
shape = SubResource("RectangleShape2D_yo3m0")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(54.5, 436.5)
shape = SubResource("RectangleShape2D_f66ue")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(579, 48.5)
shape = SubResource("RectangleShape2D_vuw40")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(327.25, 632.25)
shape = SubResource("RectangleShape2D_eb24l")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 321)
shape = SubResource("RectangleShape2D_j4uim")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1175, 321)
shape = SubResource("RectangleShape2D_j4uim")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(903.5, 663.25)
shape = SubResource("RectangleShape2D_ld6i6")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(484.5, 556.5)
shape = SubResource("RectangleShape2D_swuyn")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(850, 449)
shape = SubResource("RectangleShape2D_swuyn")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(676, 342)
shape = SubResource("RectangleShape2D_swuyn")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(384.815, 561.657)
rotation = 0.23911
shape = SubResource("RectangleShape2D_swuyn")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(379, 356.5)
shape = SubResource("RectangleShape2D_l32um")

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
offset_left = -1.0
offset_top = 1.0
offset_right = 1154.0
offset_bottom = 87.0
color = Color(0, 0.266667, 1, 1)

[node name="Label" type="Label" parent="StaticBody2D"]
offset_left = 21.0
offset_top = 19.0
offset_right = 167.0
offset_bottom = 68.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "NIVELL 2"

[node name="Label2" type="Label" parent="StaticBody2D"]
offset_left = 904.0
offset_top = 19.0
offset_right = 1132.0
offset_bottom = 68.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "APARCAUTOS"

[node name="Cotxe2" type="CharacterBody2D" parent="."]
position = Vector2(674, 550)
script = ExtResource("6_vuw40")

[node name="Cotxe2" type="Sprite2D" parent="Cotxe2"]
position = Vector2(3.25006, -2.24478)
scale = Vector2(1.31633, 1.31633)
texture = ExtResource("6_eb24l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cotxe2"]
position = Vector2(0.250061, -0.244781)
shape = SubResource("CapsuleShape2D_j4uim")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Cotxe2"]
position = Vector2(-194, -189)
emitting = false
amount = 100
lifetime = 3.0
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_eb24l")
color = Color(0, 1, 0.0470588, 1)

[node name="Timer" type="Timer" parent="Cotxe2"]
wait_time = 2.0

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(674, 546)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-174.25, -232)
shape = SubResource("RectangleShape2D_ogk0y")

[connection signal="timeout" from="Cotxe2/Timer" to="Cotxe2" method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D2" to="Cotxe2" method="_on_area_2d_2_body_entered"]
